--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -21,6 +21,9 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: "12.x"
+      - name: Install Cosmos Deps
+        working-directory: cosmos
+        run: yarn
       - name: Release to GitHub Pages
         env:
           GIT_USER: git
