--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -26,13 +26,15 @@ jobs:
         run: |
           yarn install
           yarn build
+      - name: Git Login
+        uses: fregante/setup-git-token@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
       - name: Release to GitHub Pages
         working-directory: law
         env:
           GIT_USER: git
         run: |
-          git config --global user.email "actions@gihub.com"
-          git config --global user.name "gh-actions"
           yarn install
           yarn generate
           yarn deploy
