--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
     "generate": "tsc --project cosmos-typedoc && copyfiles --up 2 cosmos-typedoc/src/**/*.hbs cosmos-typedoc/dist/ && node cosmos-typedoc/dist"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.0.0-alpha.56",
-    "@docusaurus/preset-classic": "^2.0.0-alpha.56",
+    "@docusaurus/core": "^2.0.0-alpha.61",
+    "@docusaurus/plugin-content-docs": "^2.0.0-alpha.61",
+    "@docusaurus/plugin-content-pages": "^2.0.0-alpha.61",
+    "@docusaurus/plugin-sitemap": "^2.0.0-alpha.61",
+    "@docusaurus/theme-classic": "^2.0.0-alpha.61",
+    "add": "^2.0.6",
     "classnames": "^2.2.6",
     "copyfiles": "^2.3.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "ts-node": "^8.10.2",
     "typedoc": "^0.17.0-3",
-    "typescript": "^3.9.5"
+    "typescript": "^3.9.5",
+    "yarn": "^1.22.4"
   },
   "browserslist": {
     "production": [
