--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "ts-node": "^8.10.2",
-    "typedoc": "^0.17.0-3",
-    "typescript": "^3.9.5",
+    "typedoc": "^0.18.0",
+    "typescript": "^3.9.7",
     "yarn": "^1.22.4"
   },
   "browserslist": {
